--- a/package.json
+++ b/package.json
@@ -12,14 +12,17 @@
   "dependencies": {
     "@stripe/react-stripe-js": "^3.1.1",
     "@stripe/stripe-js": "^5.5.0",
+    "firebase": "^11.1.0",
     "localforage": "^1.10.0",
     "match-sorter": "^8.0.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-firebase-hooks": "^5.1.1",
+    "react-hook-form": "^7.54.2",
     "react-icons": "^5.4.0",
     "react-infinite-scroller": "^1.2.6",
     "react-router-dom": "^7.1.1",
-    "react-toastify": "^11.0.2",
+    "react-toastify": "^11.0.3",
     "sort-by": "^1.2.0"
   },
   "devDependencies": {
